--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "test": "npm run build && jest --coverage",
-    "build": "sh ./build.sh"
+    "build": "sh ./build.sh",
+    "deploy": "npm run build && npm publish"
   }
 }
