--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "test": "npm run build && jest --coverage",
+    "test": "npm run build && jest",
     "build": "sh ./build.sh",
     "deploy": "npm run build && npm publish"
   }
